<resources>
    <string name="app_name">Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_name">Hello blank fragment</string>
    <string name="radio_dept_sis">SIS</string>
    <string name="radio_dept_cs">CS</string>
    <string name="radio_dept_bio">BIO</string>

    <string name="btn_label_submit">Submit</string>
    <string name="selectAvatar">Select your Avatar</string>
    <string name="label_current_mood_result">I am</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="label_department">Department</string>
    <string name="label_sis">SIS</string>
    <string name="label_cs">CS</string>
    <string name="label_bio">BIO</string>
    <string name="label_submit">Submit</string>
    <string name="label_createnew">Create New Contact</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="button_lable_login">Login</string>
    <string name="label_signup_link">Signup</string>
    <string name="logout">Logout</string>
</resources>
