<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="92dp"
        android:layout_height="92dp"
        app:srcCompat="@drawable/select_avatar" />

    <LinearLayout
        android:layout_width="207dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/hint_name" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/hint_email" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/hint_phone" />
    </LinearLayout>

    <TextView
        android:id="@+id/department"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:text="@string/label_department" />

</LinearLayout>
