<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.group14_inclass08.LoginActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="107dp"
        android:ems="10"
        android:hint="@string/label_email"
        android:inputType="textWebEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        app:layout_constraintRight_toRightOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="21dp"
        android:text="@string/button_lable_login"
        app:layout_constraintLeft_toLeftOf="@+id/password"
        app:layout_constraintRight_toRightOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/signupBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/label_signup_link"
        app:layout_constraintLeft_toLeftOf="@+id/loginBtn"
        app:layout_constraintRight_toRightOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_end="453dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="-68dp" />
</android.support.constraint.ConstraintLayout>
