<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.group14_inclass07.CreateNewContact">

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_name"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="94dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/select_avatar"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/departmentLabel"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="23dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/departmentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_department"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/moodView"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:text="@string/label_current_mood_value_happy"
        android:layout_marginStart="19dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/submitBtn"
        android:layout_marginEnd="11dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="119dp"
        app:layout_constraintLeft_toRightOf="@+id/currentMoodLabelValue"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="11dp" />

    <TextView
        android:id="@+id/currentMoodLabelValue"
        android:layout_width="154dp"
        android:layout_height="30dp"
        android:text="@string/label_current_mood"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/moodView"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_label_submit"
        android:layout_marginEnd="13dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/moodBar"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="13dp" />



    <SeekBar
        android:id="@+id/moodBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:max="3"
        android:progress="2"
        app:layout_constraintRight_toLeftOf="@+id/moodIcon"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/submitBtn"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="64dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="68dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/moodView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="24dp" />

    <RadioGroup
        android:id="@+id/departmentGroup"
        android:layout_width="368dp"
        android:layout_height="42dp"
        android:layout_marginBottom="54dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="54dp"
        android:checkedButton="@+id/sisDeptRadio"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/currentMoodLabelValue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">

        <RadioButton
            android:id="@+id/sisDeptRadio"
            android:layout_width="63dp"
            android:layout_height="31dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radio_dept_sis"
            tools:layout_editor_absoluteX="134dp"
            tools:layout_editor_absoluteY="148dp" />

        <RadioButton
            android:id="@+id/csDeptRadio"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.05"
            android:text="@string/radio_dept_cs"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="148dp" />

        <RadioButton
            android:id="@+id/bioDeptRadio"
            android:layout_width="74dp"
            android:layout_height="31dp"
            android:layout_weight="1"
            android:text="@string/radio_dept_bio"
            tools:layout_editor_absoluteX="301dp"
            tools:layout_editor_absoluteY="148dp" />

    </RadioGroup>

</FrameLayout>
